Music & Video page and CSS - main.css amended

--- a/styles/main.css
+++ b/styles/main.css
@@ -111,7 +111,6 @@ span.sectionnew {
 
 /*Can be applied to any page*/
 
-.text-style {
-    font-family: "Caveat", sans-serif;
-    color: #FF0000;
+.text-center {
+    text-align: center;
 }
