--- a/styles/musicvideo.css
+++ b/styles/musicvideo.css
@@ -7,6 +7,10 @@ video {
 
 /*Music Links*/
 
+.music-heading {
+    width: 40%;
+}
+
 .music-video {
     margin-top: 25px;
 }
@@ -18,6 +22,10 @@ video {
 .music-links label {
     display: block;
     text-align: center;
+}
+
+.badge-success {
+    background-color: #468847;
 }
 
 .audio {
