--- a/styles/news.css
+++ b/styles/news.css
@@ -11,8 +11,17 @@ ul {
 }
 
 .btn {
-    border: 1px solid #7a7a7a;
-    border-radius: 25px;
-    color: #fff;
-    background-color: rgb(255, 60, 60);
+    border: 1px solid #ff0000;
+    border-radius: 30px;
+    color: #ff0000;
+    background-color:#fff;
+}
+
+.btn:hover {
+    background-color: #ff0000;
+    color:#fff;
+}
+
+.text-style {
+    font-size: 17px;
 }
