--- a/styles/index.css
+++ b/styles/index.css
@@ -37,6 +37,18 @@ p.article-desc {
 
 /*Music*/
 
+.article-section div.text-center label {
+
+}
+
+.article-section div.text-center audio {
+    margin-left: 7px;
+}
+
+.article-section div.text-center a {
+    
+}
+
 .badge-success {
     background-color: #468847;
 }
@@ -90,4 +102,58 @@ td a.buy-tickets:hover {
 .news-article {
     margin-top: 20px;
     margin-bottom: 30px;
+}
+
+/*About the Band*/
+
+.article-section img {
+    padding: 45px;
+    border-radius: 65px;
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+    .article-section img {
+        margin-left: 105px;
+        border-radius: 65px;
+    }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    .article-section img {
+        float: right;
+        margin-left:0;
+        padding: 15px;
+        border-radius: 25px;
+    }
+
+    .article-section div.text-center label {
+        width:100%;
+    }
+
+    .article-section div.text-center audio {
+        margin-left: 25px;
+    }
+
+    .article-section div.text-center a.listen-more {
+        display: block;
+        font-size: 22px;
+    }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    .article-section div.text-center audio {
+        margin-left: 0;
+    }
+}
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+    .article-section img {
+        float: right;
+        padding: 15px;
+        border-radius: 25px;
+    }
 }
