--- a/styles/index.css
+++ b/styles/index.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: "Roboto";
-    src: url("assets/Fonts/Roboto-Medium.ttf");
+    src: url("assets/Fonts/Roboto-Medium-webfont.woff");
 }
 
 /*General / Useable over the page*/
