--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 
 @font-face {
     font-family: "Roboto";
-    src: url("assets/Fonts/Roboto-Medium.ttf");
+    src: url("assets/Fonts/Roboto-Medium-webfont.woff");
 }
 
 /*Header*/
