--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,8 @@
 
 @font-face {
     font-family: "Roboto";
-    src: url("assets/Fonts/Roboto-Medium-webfont.woff");
+    src: url("assets/Fonts/Roboto-Medium-webfont.woff") format('woff'),
+    url("Roboto-Medium.ttf") format("ttf");
 }
 
 /*Header*/
