--- a/styles/main.css
+++ b/styles/main.css
@@ -1,12 +1,12 @@
 @font-face {
     font-family: "Caveat";
-    src: url("assets\Fonts\Caveat-Bold.ttf");
+    src: url("../assets/Fonts/Caveat-Regular.ttf");
 }
 
 @font-face {
     font-family: "Roboto";
-    src: url("assets/Fonts/Roboto-Medium-webfont.woff") format('woff'),
-    url("Roboto-Medium.ttf") format("ttf");
+    src: url("../assets/Fonts/Roboto-Medium-webfont.woff") format('woff'),
+    url("../Roboto-Medium.ttf") format("ttf");
 }
 
 /*Header*/
@@ -54,12 +54,13 @@ footer {
     font-family: "Caveat", sans-serif;
     color: #FF0000;
     display: block;
-    font-size: 35px;
+    font-size: 30px;
     position: relative;
     background-color: #fff;
     z-index: 3;
-    width: 50%;
+    width: 60%;
     margin:0 auto;
+    
     margin-bottom: 20px;
 }
 
@@ -131,4 +132,28 @@ span.sectionnew {
 
 .main-text {
     font-family: "Roboto", sans-serif;
+}
+
+/*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) {
+    .social-heading {
+        width: 45%;
+    }
+}
+
+/*Medium devices (tablets, 768px and up)*/
+@media (min-width: 768px) {
+    .social-heading {
+        width: 100%;
+    }
+}
+
+/*Large devices (desktops, 992px and up)*/
+@media (min-width: 992px) {
+    
+}
+
+/*Extra large devices (large desktops, 1200px and up)*/
+@media (min-width: 1200px) {
+    
 }
